fix footer sizing on mobile

--- a/nicepage.css
+++ b/nicepage.css
@@ -41230,14 +41230,14 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-sheet-1 {
-  min-height: 97px;
+  min-height: 103px;
   margin: 0 auto;
 }
 
 .u-header .u-image-1 {
-  width: 256px;
-  height: 92px;
-  margin: 3px auto 0 0;
+  width: 332px;
+  height: 118px;
+  margin: 0 auto 0 0;
 }
 
 .u-header .u-logo-image-1 {
@@ -41251,7 +41251,7 @@ a.u-link.u-text-hover-grey-90:hover {
   min-height: 16px;
   width: 26px;
   min-width: 16px;
-  margin: -60px 0 0 auto;
+  margin: -76px 0 0 auto;
 }
 
 .u-header .u-icon-1 {
@@ -41259,11 +41259,11 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: -31px 120px 30px auto;
+  margin: -31px 120px 43px auto;
 }
 
 .u-header .u-nav-1 {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
 }
 
 .u-header .u-nav-2 {
@@ -41271,6 +41271,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 @media (max-width: 1199px) {
   .u-header .u-social-icons-1 {
+    margin-top: -60px;
     margin-right: 0;
   }
 
@@ -41306,7 +41307,7 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-image-1 {
-    margin-top: 3px;
+    margin-top: 0;
   }
 
   .u-header .u-menu-1 {
@@ -41314,13 +41315,48 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 .u-footer .u-sheet-1 {
-  min-height: 122px;
+  min-height: 165px;
+}
+
+.u-footer .u-layout-wrap-1 {
+  margin: 1px 0;
+}
+
+.u-footer .u-layout-cell-1 {
+  min-height: 121px;
+}
+
+.u-footer .u-container-layout-1 {
+  padding: 20px 30px;
+}
+
+.u-footer .u-position-1 {
+  width: 300px;
+  margin: 0;
+}
+
+.u-footer .u-btn-1 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-footer .u-btn-2 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-footer .u-layout-cell-2 {
+  min-height: 194px;
+}
+
+.u-footer .u-container-layout-2 {
+  padding: 0;
 }
 
 .u-footer .u-image-1 {
-  width: 332px;
-  height: 119px;
-  margin: 0 auto 0 0;
+  height: 128px;
+  width: 360px;
+  margin: 0;
 }
 
 .u-footer .u-logo-image-1 {
@@ -41328,124 +41364,125 @@ a.u-link.u-text-hover-grey-90:hover {
   height: 100%;
 }
 
-.u-footer .u-btn-1 {
-  border-style: solid;
-  margin: -98px 0 0 auto;
-  padding: 0;
+.u-footer .u-layout-cell-3 {
+  min-height: 194px;
 }
 
-.u-footer .u-btn-2 {
-  border-style: solid;
-  margin: -26px 118px 0 auto;
-  padding: 0;
+.u-footer .u-container-layout-3 {
+  padding: 20px 0;
 }
 
 .u-footer .u-social-icons-1 {
-  height: 32px;
-  min-height: 16px;
-  width: 32px;
-  min-width: 16px;
   white-space: nowrap;
-  margin: 25px 0 0 auto;
+  height: 24px;
+  min-height: 16px;
+  width: 24px;
+  min-width: 16px;
+  margin: 12px 0 0 auto;
 }
 
 .u-footer .u-icon-1 {
   color: rgb(197, 54, 164) !important;
 }
 
-.u-footer .u-text-1 {
-  margin: -29px 32px 0 1000px;
-}
-
-.u-footer .u-text-2 {
-  width: 329px;
-  margin: -25px auto 20px;
+.u-footer .u-position-2 {
+  margin: 25px 20px 0 0;
 }
 @media (max-width: 1199px) {
-  .u-footer .u-image-1 {
-    margin-top: -77px;
+  .u-footer .u-sheet-1 {
+    min-height: 144px;
   }
 
-  .u-footer .u-btn-1 {
-    margin-top: -46px;
+  .u-footer .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
   }
 
-  .u-footer .u-btn-2 {
-    margin-top: -26px;
-    margin-right: 0;
+  .u-footer .u-container-layout-1 {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+
+  .u-footer .u-position-1 {
+    width: 233px;
+  }
+
+  .u-footer .u-layout-cell-2 {
+    min-height: 121px;
+  }
+
+  .u-footer .u-layout-cell-3 {
+    min-height: 160px;
+  }
+
+  .u-footer .u-container-layout-3 {
+    padding-left: 25px;
+    padding-right: 25px;
   }
 
   .u-footer .u-social-icons-1 {
-    height: 32px;
-    width: 32px;
-    margin-top: -27px;
-    margin-right: 0;
+    width: 127px;
   }
 
-  .u-footer .u-text-1 {
-    margin-top: -28px;
-    margin-right: 0;
-    margin-left: 831px;
-  }
-
-  .u-footer .u-text-2 {
-    width: 631px;
-    margin-top: -26px;
-    margin-bottom: 60px;
+  .u-footer .u-position-2 {
+    margin-right: initial;
+    margin-left: initial;
   }
 }
 @media (max-width: 991px) {
-  .u-footer .u-text-1 {
-    margin-left: 611px;
+  .u-footer .u-sheet-1 {
+    min-height: 159px;
   }
 
-  .u-footer .u-text-2 {
-    margin-top: -26px;
+  .u-footer .u-container-layout-1 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
-}
-@media (max-width: 767px) {
+
   .u-footer .u-image-1 {
-    margin-top: -77px;
-    margin-left: 230px;
+    margin-right: 20px;
   }
 
-  .u-footer .u-btn-1 {
-    margin-top: -27px;
+  .u-footer .u-layout-cell-3 {
+    min-height: 100px;
+  }
+
+  .u-footer .u-container-layout-3 {
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .u-footer .u-social-icons-1 {
-    margin-top: 35px;
     margin-right: auto;
-  }
-
-  .u-footer .u-text-1 {
-    margin-top: -85px;
-    margin-left: 431px;
-  }
-
-  .u-footer .u-text-2 {
-    width: 540px;
-    margin-top: -31px;
     margin-left: 0;
   }
 }
-@media (max-width: 575px) {
+@media (max-width: 767px) {
+  .u-footer .u-sheet-1 {
+    min-height: 317px;
+  }
+
+  .u-footer .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
   .u-footer .u-image-1 {
+    margin-right: 0;
+  }
+
+  .u-footer .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-footer .u-social-icons-1 {
     margin-left: auto;
   }
-
-  .u-footer .u-btn-1 {
-    margin-top: -27px;
-  }
-
-  .u-footer .u-text-1 {
-    margin-top: -85px;
-    margin-left: 231px;
-  }
-
-  .u-footer .u-text-2 {
-    width: 340px;
-    margin-top: -31px;
+}
+@media (max-width: 575px) {
+  .u-footer .u-sheet-1 {
+    min-height: 253px;
   }
 }
 
